bin_PROGRAMS = mstrie
AM_CXXFLAGS = -std=c++14
mstrie_SOURCES = \
    lib/configurator.cpp \
    lib/configurator.hpp \
	utils/file_utils.cpp \
    utils/file_utils.hpp \
	core/mstrie.cpp \
    core/mstrie.hpp \
	core/index_manager.cpp \
    core/index_manager.hpp \
	cli/cli.cpp \
    cli/cli.hpp \
	benchmark/benchmark.cpp \
    benchmark/benchmark.hpp \
	main.cpp
